@@ -1,3 +1,10 @@
+<%
+  if ENV['BEAKER_HYPERVISOR']
+    hypervisor = ENV['BEAKER_HYPERVISOR']
+  else
+    hypervisor = 'vagrant'
+  end
+-%>
 ---
 HOSTS:
   el7:
@@ -6,7 +13,7 @@ HOSTS:
       - default
     platform:   el-7-x86_64
     box:        centos/7
-    hypervisor: vagrant
+    hypervisor: <%= hypervisor %>
 
 CONFIG:
   log_level: verbose
@@ -15,5 +22,9 @@ CONFIG:
   synced_folder: enabled
   ssh:
     timeout: 2
+
+<% if ENV['BEAKER_PUPPET_COLLECTION'] -%>
+  puppet_collection: <%= ENV['BEAKER_PUPPET_COLLECTION'] %>
+<% end -%>
 # vb_gui: true
 
